# Digital_image_process_113_1_BIME

./: .gitignore
00.Qt安裝方式和在vscode內執行所需設定/: 00.Qt教學網址.txt  01.Qt下載網址.txt  02.vscode設定.txt  03.opencv安裝方式.txt  04.把自己的CMakeLists照著這份!!!!!!!!!的地方修改 共有四處.txt  05.產生DLL檔案.txt  06.CMake編譯opencv_contrib.txt  CMakeCache.txt  README範本.md  把自己的CMakeLists照著這份!!!!!!!!!的地方修改.txt
01.hw/: README.md
01.hw/code/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondprocess.cpp  secondprocess.h  secondwindow.cpp  secondwindow.h
02.hw/: README.html  README.md  自己練習用 雙線性插值 範例.py
02.hw/code/: CMakeLists.txt  generalprocess.cpp  generalprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  specificprocess.cpp
03.hw/: README.html  README.md
03.hw/code/: code.pro  code.pro.user.2c74e3e  generalprocess.cpp  generalprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  specificprocess.cpp  specificprocess.h
04.hw/: README.html  README.md
04.hw/code/: code.pro  generalprocess.cpp  generalprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  specificprocess.cpp  specificprocess.h
04.hw/release/: 缺少opencv dll檔案.txt
05.hw/: README.html  README.md
05.hw/code/: generalprocess.cpp  generalprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
06.hw/: README.html  README.md
06.hw/code/: code.pro.user.fc6ff38  generalprocess.cpp  generalprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
07.hw/: README.md
07.hw/code/: code.pro  code.pro.user.2c74e3e  generalprocess.h  mainwindow.h
07.期末進度報告/code/: generalprocess.cpp  mainwindow.cpp  specificprocess.cpp  specificprocess.h
期末專題/: 提案.docx  期末報告.doc  進度報告.doc
